@@ -48,7 +48,7 @@
 #endif
 
 
-#if CC_COCOSNODE_RENDER_SUBPIXEL
+#if CC_NODE_RENDER_SUBPIXEL
 #define RENDER_IN_SUBPIXEL
 #else
 #define RENDER_IN_SUBPIXEL (NSInteger)
