@@ -29,7 +29,7 @@
 
 /** CCScene is a subclass of CCNode that is used only as an abstract concept.
  
- CCScene an CCNode are almost identical with the difference that CCScene has it's
+ CCScene an CCNode are almost identical with the difference that CCScene has its
  anchor point (by default) at the center of the screen.
 
  For the moment CCScene has no other logic than that, but in future releases it might have
