@@ -65,7 +65,7 @@ enum {
  - Layer name
  - Layer size
  - Layer opacity at creation time (it can be modified at runtime)
- - Whether the layer is visible (if it's not visible, then the CocosNode won't be created)
+ - Whether the layer is visible (if it is not visible, then the CCNode won't be created)
  
  This information is obtained from the TMX file.
  */
